# AppFlowy-LAI

./: Cargo.toml  README.md  dev.env  install.sh
.github/workflows/: integration_test.yaml  lint.yaml  macos_test.yaml
af-local-ai/: Cargo.toml
af-local-ai/src/: ai_ops.rs  embedding_ops.rs  embedding_plugin.rs  ollama_plugin.rs
af-local-ai/tests/: util.rs
af-local-ai/tests/chat_test/: mod.rs
af-local-ai/tests/embedding_test/: mod.rs
af-mcp/: Cargo.toml
af-mcp/src/: client.rs  entities.rs  lib.rs
af-mcp/tests/connect_test/: mod.rs
af-plugin/: Cargo.toml
af-plugin/src/: error.rs  manager.rs
af-plugin/src/core/: mod.rs  path.rs  plugin.rs  rpc_loop.rs  rpc_peer.rs
appflowy-local-ai/: Cargo.toml
appflowy-local-ai/src/: ai_ops.rs  embedding_ops.rs  embedding_plugin.rs  lib.rs  ollama_plugin.rs
appflowy-local-ai/tests/: util.rs
appflowy-local-ai/tests/chat_test/: mod.rs
appflowy-local-ai/tests/download_test/: mod.rs
appflowy-local-ai/tests/embedding_test/: mod.rs
appflowy-plugin/: Cargo.toml
appflowy-plugin/src/: manager.rs
appflowy-plugin/src/core/: parser.rs  plugin.rs  rpc_loop.rs  rpc_peer.rs
local-ai-client/: Cargo.toml
local-ai-client/src/: ai_ops.rs  embedding_ops.rs  embedding_plugin.rs  lib.rs  ollama_plugin.rs
local-ai-client/tests/: util.rs
plugin-core/: Cargo.toml
plugin-core/src/core/: rpc_object.rs
