[workspace]
members = [
  "local-ai-client",
  "plugin-core",
]
resolver = "2"

[workspace.dependencies]
plugin-core = { path = "plugin-core" }
local-ai-client = { path = "local-ai-client" }
parking_lot = "0.12"
tracing = "0.1"
anyhow = "1.0"
serde_json = "1.0"
tokio-stream = "0.1.15"
serde = "1.0"

