[workspace]
members = [
  "af-local-ai",
  "af-mcp",
  "af-plugin",
]
resolver = "2"

[workspace.dependencies]
af-plugin = { path = "af-plugin" }
af-local-ai = { path = "af-local-ai" }
mcp-server = { path = "af-mcp" }
parking_lot = "0.12"
tracing = "0.1"
anyhow = "1.0"
serde_json = "1.0"
tokio-stream = "0.1.15"
serde = "1.0"

