[package]
name = "local-ai-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6"
anyhow = "1.0"
plugin-core = { workspace = true }
serde_json.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
serde.workspace = true
tokio = { version = "1" }
zip = { version = "2.1.3", features = ["deflate"] }
zip-extensions = "0.8.0"
reqwest = { version = "0.11", features = ["stream"] }
tokio-util = { version = "0.7" }
futures = "0.3.31"

[features]
verbose = ["plugin-core/verbose"]

[dev-dependencies]
dotenv = "0.15.0"
uuid = { version = "1.9.1", features = ["v4"] }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter", "ansi", "json"] }
simsimd = "4.4.0"
tempfile = "3.10.1"
plugin-core = { workspace = true, features = ["verbose"] }
